--- a/public/styles.css
+++ b/public/styles.css
@@ -566,6 +566,10 @@ video {
   display: block;
 }
 
+.inline-block{
+  display: inline-block;
+}
+
 .flex{
   display: flex;
 }
@@ -578,8 +582,24 @@ video {
   height: 8rem;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
 .w-full{
   width: 100%;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-5{
+  width: 1.25rem;
 }
 
 .justify-center{
